--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -30,6 +30,11 @@ ul{
             transition: all 0.3s ease;
             &:hover{
                 box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+                background-color: white;
+            }
+            &:focus{
+                background-color: #000;
+                color: white;
             }
         }
     }
@@ -70,6 +75,10 @@ ul{
             transform: translateY(-20%) rotate(360deg);
         }
     }
+    h4{
+        color: #21ba75;
+        margin: 10px 0 15px;
+    }
     button{
         display: block;
         width: fit-content;
@@ -84,5 +93,21 @@ ul{
             background-color: #1b975f;
             transform: scale(1.05);
         }
+    }
+}
+
+@media screen  and (max-width: 768px){
+    .card{
+        width: 90%;
+        img{
+            width: 100px;
+            height: 100px;
+        }
+    }
+}
+@media screen and (max-width: 992px) {
+    .card{
+        width: 40%;
+        flex-grow: 1;
     }
 }
